--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "measur",
   "version": "0.1.0",
+  "homepage": "https://lucimart.github.io/measur",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "gh-pages": "^6.3.0",
     "typescript": "^5"
   }
 }
